Implement initial enrollment validation

--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -7,7 +7,7 @@
                 <div class="ui card">
                     <div class="content">
                       <div class="ui blue medium header"><i class="<%=course.icon%> icon"></i><%=course.name%></div>
-                      <div class="meta right floated"><i class="user icon"></i><%=course.students.length%></div>
+                      <div class="meta right floated"><i class="user icon"></i> <%=course.students.length%> Enrolled</div>
                     </div>
                     <div class="content">
                     <h4 class="ui header">Course Objectives</h4>
