Update course index enroll button text

--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -18,7 +18,7 @@
                     <div class="extra content">
                         <form action="/courses/<%=course._id%>/enroll/<%=currentUser._id%>" method="POST">
                             <div class="ui two buttons">
-                                <input type="submit" value="Enroll Now" class="ui blue button">
+                                <input type="submit" value="Enroll" class="ui blue button">
                                 <a href="/courses/<%=course._id%>" class="ui basic blue button">Learn More</a>
                             </div>
                         </form>
