--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,16 +10,7 @@
             </div>
             <div class="ui segments">
                 <div class="ui segment">
-                    <p>Welcome to the CS101!</p>
-                    <a href="#" class="medium ui button red">View</a>
-                </div>
-                <div class="ui segment">
-                    <p>Getting started tutorial</p>
-                    <a href="#" class="medium ui button red">View</a>
-                </div>
-                <div class="ui segment">
-                    <p>Please review the Syllabus!!</p>
-                    <a href="#" class="medium ui button red">View</a>
+                    <p>There currently aren't any announcements. Check back later!</p>
                 </div>
             </div>
         </div>
