--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -10,3 +10,47 @@
 .info-header {
     border-bottom: 3px solid black;
 }
+
+/* HOME PAGE STYLES */
+#hero {
+	border-radius: 0;
+	border: none;
+	margin: 0;
+	height: 90%;
+	background-image: url("https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#hero::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: linear-gradient(
+		rgba(0, 0, 0, 0.5) 0,
+		rgba(0, 0, 0, 0.3) 50%,
+		rgba(0, 0, 0, 0.1) 100%
+	);
+}
+
+#hero {
+	height: 700px;
+}
+
+#hero .ui.container {
+	height: 100%;
+}
+
+#hero .ui.grid {
+	align-items: center;
+	height: 100%;
+}
+
+.hero-content {
+	color: white;
+	z-index: 10;
+}
