Fix logout redirection

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
     <div class="ui stackable inverted menu">
         <div class="ui container">
             <% if (currentUser) { %>
-            <a href="/"class="item"><i class="tachometer alternate icon"></i>Dashboard</a>
+            <a href="/dashboard"class="item"><i class="tachometer alternate icon"></i>Dashboard</a>
             <% } else { %>
             <a href="/"class="item"><i class="home icon"></i>Home</a>
             <% } %>
