Update student show

--- a/views/students/show.ejs
+++ b/views/students/show.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="info-header">Student Information</h1>
+    <h1 class="info-header">Student Profile</h1>
     <div id="show-student" class="ui segment">
         <div class="ui grid stackable">
             <div class="four wide column">
