Update menu partial

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -3,7 +3,7 @@
         <% if (currentUser) { %>
         <a href="/dashboard"class="item"><i class="tachometer alternate icon"></i>Dashboard</a>
         <% } else { %>
-        <a href="/"class="item"><i class="home icon"></i>Home</a>
+        <a href="/"class="header item"><i class="code icon"></i>Learnvas</a>
         <% } %>
 
         <% if (currentUser) { %>
